--- a/network.yml
+++ b/network.yml
@@ -1,10 +1,10 @@
 Description: >
-  Udagram Web App Networking Infrastructure
+My Network Infrastructure for Udagram Web App
+
 
 Parameters:
-
-    EnvironmentName:
-        Description: An environment name that will be prefixed to resources
+ EnvironmentName:
+        Description: An environment that will be prefixed to resources and their variables
         Type: String
     
     VpcCIDR:
@@ -31,6 +31,7 @@ Parameters:
         Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
         Type: String
         Default: 10.0.3.0/24
+
 
 Resources:
 
@@ -197,37 +198,37 @@ Resources:
 
 Outputs: 
     VPC: 
-        Description: A reference to the created VPC
+        Description: VPC resource created
         Value: !Ref VPC
         Export:
           Name: !Sub ${EnvironmentName}-VPCID
 
     VPCPublicRouteTable:
-        Description: Public Routing
+        Description: Public Routing Table
         Value: !Ref PublicRouteTable
         Export:
           Name: !Sub ${EnvironmentName}-PUB-RT
 
     VPCPrivateRouteTable1:
-        Description: Private Routing AZ1
+        Description: Private Routing AZ1(Availability Zone 1)
         Value: !Ref PrivateRouteTable1
         Export:
           Name: !Sub ${EnvironmentName}-PRI1-RT
 
     VPCPrivateRouteTable2:
-        Description: Private Routing AZ2
+        Description: Private Routing AZ2(Availability Zone 2)
         Value: !Ref PrivateRouteTable2
         Export:
           Name: !Sub ${EnvironmentName}-PRI2-RT
 
     PublicSubnets:
-        Description: A list of the public subnets
+        Description: A list of the public subnets alloted
         Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
         Export:
           Name: !Sub ${EnvironmentName}-PUB-NETS
 
     PrivateSubnets:
-        Description: A list of the private subnets
+        Description: A list of the private subnets alloted
         Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
         Export:
           Name: !Sub ${EnvironmentName}-PRIV-NETS
@@ -255,4 +256,3 @@ Outputs:
         Value: !Ref PrivateSubnet2
         Export:
           Name: !Sub ${EnvironmentName}-PRI2-SN
-
