--- a/server.yml
+++ b/server.yml
@@ -1,13 +1,16 @@
+Description:
+  My Server Infrastructure for Udagram Web App
+
 Parameters:
   EnvironmentName:
     Description: An environment that will be prefixed to resources and their variables
     Type: String
   
-  AMI-ID:
+  AMIID:
     Description: Linux 18.04 AMI image id
     Type: String
-    Default: ami-003634241a8fcdec0
-
+    Default: "ami-0a4df59262c92cf19"
+  
   DiskVolumeSize:
     Description: Specify the EBS storage volume desired. Minimum Strorage of 10 gb
     Type: String
@@ -18,22 +21,25 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       Description: Setup S3 Access for Web App
-      ManagedPolicyArns: "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
+      ManagedPolicyArns:
+         - "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
+      Path: "/"
       AssumeRolePolicyDocument:
-        Version: 2012-10-17
+        Version: "2012-10-17"
         Statement:
           - Effect: Allow
-          Principal:
-            Service: ec2.amazonaws.com
-            Action: sts:AssumeRole
-          Path: /
+            Principal:
+              Service: 
+                - "ec2.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
   
   InstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
       Path: /
       Roles:
-        - !Ref InstanceRole
+      - !Ref InstanceRole
     
   LoadBalancerSG:
     Type: AWS::EC2::SecurityGroup
@@ -79,30 +85,94 @@ Resources:
     Properties:
       UserData:
         Fn::Base64: !Sub |
-         #!/bin/bash
-        apt-get update -y
-        apt-get install apache2 -y
-        systemctl start apache2.service
-        cd /var/www/html
-        sudo rm index.html
-        sudo aws s3 cp s3://udacity-demo-1/udacity.zip .
-        sudo unzip -o udacity.zip
-        systemctl restart apache2.service
+          #!/bin/bash
+          apt-get update -y
+          apt-get install unzip awscli -y
+          apt-get install apache2 -y
+          systemctl start apache2.service
+          cd var/www/html
+          sudo rm index.html
+          sudo aws s3 cp s3://udacity-demo-1/udacity.zip .
+          sudo unzip -o udacity.zip
+          systemctl restart apache2.service
 
-      ImageId: !Ref AMI-ID
+      ImageId: !Ref AMIID
+
       IamInstanceProfile: !Ref InstanceProfile
       SecurityGroups:
-      - Ref: WebServerSecGroup
+        - Ref: WebServerSG
       InstanceType: t2.medium
-      Monitoring: true
       BlockDeviceMappings:
-      - DeviceName: "/dev/sdk"
-        Ebs:
-          VolumeSize: !Ref DiskVolumeSize
-          DeleteOnTermination: true
+        - DeviceName: "/dev/sdk"
+          Ebs:
+            VolumeSize: !Ref DiskVolumeSize
+            DeleteOnTermination: true
+            
+  WebAppGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties:
+      VPCZoneIdentifier:
+        - Fn::ImportValue: !Sub "${EnvironmentName}-PRIV-NETS"
+      LaunchConfigurationName:
+        Ref: WebAppLaunchConfig
+      MinSize: '4'
+      MaxSize: '4'
+      TargetGroupARNs:
+        - Ref: WebAppTG
+      DesiredCapacity: '4'
+      
+  WebAppLoadBalancer:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      Subnets:
+        - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
+        - Fn::ImportValue: !Sub "${EnvironmentName}-PUB2-SN"
+      SecurityGroups:
+        - Ref: LoadBalancerSG
+  Listener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn:
+            Ref: WebAppTG
+      LoadBalancerArn:
+        Ref: WebAppLoadBalancer
+      Port: '80'
+      Protocol: HTTP
+
+  ALBListenerRule:
+      Type: AWS::ElasticLoadBalancingV2::ListenerRule
+      Properties:
+        Actions:
+        - Type: forward
+          TargetGroupArn: !Ref 'WebAppTG'
+        Conditions:
+        - Field: path-pattern
+          Values: [/]
+        ListenerArn: !Ref 'Listener'
+        Priority: 1 
+
+  WebAppTG:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      HealthCheckIntervalSeconds: 35
+      HealthCheckPath: /
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 10
+      HealthyThresholdCount: 2
+      Port: 80
+      Protocol: HTTP
+      UnhealthyThresholdCount: 5
+      VpcId: 
+        Fn::ImportValue:
+          Fn::Sub: "${EnvironmentName}-VPCID"
 
 
+Outputs:
+  Website:
+    Description: Application URL
+    Value: !Join [ "", [ "http://", !GetAtt WebAppLoadBalancer.DNSName ]]
 
-Output:
 
  
